# reliability-aware-heavy-bulky-delivery

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_DESCRIPTION.md  README.md  constraints-verified.txt  forecast_uplift_addendum.json  gpu_cuda_execution_addendum.json  post_merge_qualification_addendum.json  pyproject.toml  qualification_manifest.json  release_bundle_manifest.json  release_candidate_handoff.json  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  DATA_ASSUMPTION_CARD.md  RELIABILITY_METHOD.md  RESUME_EVIDENCE.md  RUNBOOK.md  chronos_lora_evidence.md  forecast_uplift_addendum.md  gpu_cuda_execution_addendum.md  improvement_report.md  known_limitations.md  post_merge_qualification_addendum.md  release_qualification.md
reports/: ADVANCED_SERVICE_VALIDATION.md  CROSS_PLATFORM_DEPENDENCY_AVAILABILITY.md  FINAL_AUDIT.md  FRAMEWORK_TECHNICAL_REPORT.md  LOCAL_GITHUB_RUNNABILITY.md  M5_VALIDATION_REPORT.md  OPTIMIZATION_LOOP_SUMMARY.md  RELEASE_NOTES_v0.4.3.md  advanced_service_console.json  advanced_service_cpu_validation.json  api_runtime_smoke.json  capabilities.json  full_console.json  full_pipeline_validation_report.md  full_pipeline_validation_summary.json  qfinal_api_runtime_smoke.json  sdist_smoke_console.json  smoke_console.json  smoke_repeat_console.json  wheel_smoke_console.json
scripts/: api_runtime_smoke.py  check_direct_dependencies.py  distribution_integrity.py  download_amazon_routes.sh  full_pipeline_validation.py  prepare_amazon_route_marts.py  run_advanced_service_validation.py  run_chronos2.py  run_chronos_lora_evaluation.py  run_full_validation.ps1  run_full_validation.sh  run_m5_validation.py
tests/: conftest.py  test_amazon_routes.py  test_api_path_budget.py  test_chronos_lora_artifacts.py  (+12 more)
(+36 files in other folders)
