[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heavy-bulky-delivery-reliability"
version = "0.4.3"
description = "Reliability-aware heavy-bulky forecast-to-execution planning and operational replay benchmark"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{name = "Jinwoo Bae"}]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "numpy>=1.26,<3.0",
  "pandas>=2.1,<4.0",
  "scikit-learn>=1.4,<2.0",
  "PyYAML>=6.0,<7.0",
  "pydantic>=2.6,<3.0",
  "tabulate>=0.9,<1.0",
]

[project.optional-dependencies]
full = [
  "lightgbm>=4.3,<5.0",
  "ortools>=9.10,<10.0",
  "fastapi>=0.110,<2.0",
  "uvicorn>=0.29,<1.0",
  "duckdb>=1.0,<2.0",
]
advanced = ["torch>=2.2"]
chronos = ["chronos-forecasting>=1.5", "torch>=2.2"]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.4,<1",
  "httpx2>=2,<3",
  "build>=1.2,<2",
  "setuptools>=82,<83",
  "wheel>=0.43",
]

[project.scripts]
heavy-bulky = "heavy_bulky.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
heavy_bulky = ["configs/*.yaml", "sql/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings"

[tool.coverage.run]
source = ["heavy_bulky"]
branch = true
omit = [
  "src/heavy_bulky/chronos_adapter.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 72

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
